--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,7 +89,7 @@ footer {
     color: var(--vintage-red);
 }
 
-/* from https://css-tricks.com/perfect-full-page-background-image/ */
+/* from https://www.30secondsofcode.org/css/s/hover-underline-animation */
 .navbar .navbar-nav .nav-link:after{
     content: '';
     position: absolute;
@@ -103,7 +103,7 @@ footer {
     transition: transform 0.25s ease-out;
 }
 
-/* from https://css-tricks.com/perfect-full-page-background-image/ */
+/* from https://www.30secondsofcode.org/css/s/hover-underline-animation */
 .navbar .navbar-nav .nav-link:hover:after {
     transform: scaleX(1);
     transform-origin: bottom left;
