--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -18,9 +18,15 @@
                 <h3 class="profile-bar mx-5">Hello {{ user.username }}</h3>
             </div>
             <ul class="nav col-10 col-lg-auto me-lg-auto mb-2 mb-md-0">
-                <li><a href="{% url 'add_car' %}" class="nav-link add-link t-white mx-2">Add Post</a></li>
-                <button type="button" class="btn t-white mx-2 px-4" data-bs-toggle="modal" data-bs-target="#modal-logout">Log
-                    Out</button>
+                <li>
+                    <a href="{% url 'add_car' %}" class="nav-link add-link t-white mx-2">
+                        Add Post <span><i class="fas fa-plus-circle"></i></span>
+                    </a>
+                </li>
+                <button type="button" class="btn t-white mx-2 px-4" data-bs-toggle="modal"
+                    data-bs-target="#modal-logout">
+                    LogOut <span><i class="fas fa-sign-out-alt"></i></span>
+                </button>
             </ul>
             {% else %}
             <div class="text-end profile-icon">
@@ -30,7 +36,11 @@
                 <h3 class="text-uppercase mx-5">Welcome</h3>
             </div>
             <ul class="nav col-10 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'login' %}" class="nav-link add-link t-white mx-2">Log In</a></li>
+                <li>
+                    <a href="{% url 'login' %}" class="nav-link add-link t-white mx-2">
+                        Log In <span><i class="fas fa-sign-in-alt"></i></span>
+                    </a>
+                </li>
             </ul>
             {% endif %}
 
@@ -68,39 +78,58 @@
     <div class="container">
         <div class="row justify-content-center">
             {% if user.is_authenticated %}
-                {%  for post in post_car  %}
-                    {% if user.id is post.author.id %}
-                    <!-- Show all post if the author is the user -->
-                    <div class="col-lg-4 col-md-12 contain-photo">
-                        <div class="row">
-                            <div class="col-lg-4 col-md-12">
-                                <div class="view-more text-white">
-                                    <a href="{% url 'car_detail' post.id %}" class="hvr-icon-grow"><i class="far fa-eye px-3 hvr-icon"></i></a>
-                                    <!-- <button class="btn ms-3"><i class="far fa-eye px-3"></i></button> -->
-                                    <i class="fas fa-heart"></i> {{ post.number_of_likes }}
-                                    <span class="col-1">
-                                        <i class="far fa-comments"></i>
-                                    </span>
-                                </div>
-                            </div>
+            {%  for post in post_car  %}
+            {% if user.id is post.author.id %}
+            <!-- Show all post if the author is the user -->
+            <div class="col-lg-4 col-md-12 contain-photo">
+                <div class="row">
+                    <div class="col-lg-4 col-md-12">
+                        <div class="view-more text-white text-center">
+                                <a href="{% url 'car_detail' post.id %}" class="hvr-icon-grow"
+                                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="Read more">
+                                    <i class="far fa-eye hvr-icon"></i>
+                                </a>
+                                <a href="#" class="hvr-icon-grow-rotate"
+                                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="Edit post">
+                                    <i class="fas fa-pen hvr-icon"></i>
+                                </a>
+                                <a href="#" class="hvr-icon-spin"
+                                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="Delete">
+                                    <i class="fas fa-trash hvr-icon"></i>
+                                </a>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-4 col-md-12">
-                                <article class="text-left">
-                                    <h2>{{ post.car_model_title }}</h2>
-                                    <h4>({{ post.year_manufactured }})</h4>
-                                </article>
-                            </div>
-                        </div>
-
-                        {% if "placeholder" in post.car_image.url %}
-                        <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
-                        {% else %}
-                        <img src="{{ post.car_image.url }}" alt="Car Image">
-                        {% endif %}
                     </div>
-                    {% endif %}
-                {% endfor %}
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-12">
+                        <article class="text-left">
+                            <h2>{{ post.car_model_title }}</h2>
+                            <h4>({{ post.year_manufactured }})</h4>
+                        </article>
+                    </div>
+                </div>
+
+                {% if "placeholder" in post.car_image.url %}
+                <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
+                {% else %}
+                <img src="{{ post.car_image.url }}" alt="Car Image">
+                {% endif %}
+                <!--                         
+                        <div class="row justify-content my-3">
+                            <div class="col-4 post-photo">
+                                <img src="{% static 'images/vc-blue-sedan.jpg' %}" alt="Car image">
+                            </div>
+                            <div class="col-6">
+                                <p>col-6</p>
+                            </div>
+                            <div class="col-2">
+                                <p>col-2</p>
+                            </div>
+                        </div>
+                         -->
+            </div>
+            {% endif %}
+            {% endfor %}
             {% else %}
             <div class="row">
                 <div class="col-md-8 offset-md-2 mt-5 pt-3 text-center">
@@ -111,7 +140,8 @@
             {% endif %}
         </div>
     </div>
-    
+    </div>
+
 </section>
 
 {% endblock %}
