--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -22,7 +22,7 @@
                     <div class="carousel-item active">
                         <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" class="d-block w-100"
                             alt="Logo">
-                        <div class="carousel-caption d-block transparent-bg">
+                        <div class="carousel-caption d-block black-bg">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
@@ -30,21 +30,21 @@
                     <div class="carousel-item">
                         <img src="{% static 'images/vc-red-ford-mustang.jpg' %}" class="d-block w-100"
                             alt="Ford Mustang">
-                        <div class="carousel-caption d-block transparent-bg">
+                        <div class="carousel-caption d-block black-bg">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{% static 'images/vc-blue-sedan.jpg' %}" class="d-block w-100" alt="Blue Sedan">
-                        <div class="carousel-caption d-block transparent-bg">
+                        <div class="carousel-caption d-block black-bg">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{% static 'images/vc-vintage-cars.jpg' %}" class="d-block w-100" alt="Vintage cars">
-                        <div class="carousel-caption d-block transparent-bg">
+                        <div class="carousel-caption d-block black-bg">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
                         </div>
@@ -52,12 +52,12 @@
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#vintageCarsCarousel"
                     data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon transparent-bg" aria-hidden="true"></span>
+                    <span class="carousel-control-prev-icon black-bg" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#vintageCarsCarousel"
                     data-bs-slide="next">
-                    <span class="carousel-control-next-icon transparent-bg" aria-hidden="true"></span>
+                    <span class="carousel-control-next-icon black-bg" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
