--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -3,42 +3,86 @@
 {% load static %}
 
 {% block content %}
-<header class="masthead">
+<!-- Head post -->
+<header class="masthead g-0">
     <div class="row justify-content-center">
-        <div class="col position-relative">
-            <div class="row">
-                <div class="col post-heading main-text">
-                    <h1 class="px-4">{{ post_car.car_model_title }}</h1>
-                    <h2 class="subheading px-4">({{ post_car.year_manufactured }})</h2>
-                    <span class="meta px-4">
-                        Posted by
-                        <a href="#!">{{ post_car.author }}</a>
-                        {{ post_car.date_created }}
-                    </span>
-                </div>
-                <div class="masthead-image image-container justify-content-center">
-                    {% if "placeholder" in post_car.car_image.url %}
-                    <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
-                    {% else %}
-                    <img src="{{ post_car.car_image.url }}" alt="Car image" width="100%">
-                    {% endif %}
-                </div>
+        <div class="col masthead-image image-container justify-content-center position-relative">
+            {% if "placeholder" in post_car.car_image.url %}
+            <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
+            {% else %}
+            <img src="{{ post_car.car_image.url }}" alt="Car image" width="100%">
+            {% endif %}
+
+            <div class="col post-heading main-text">
+                <h1 class="px-4">{{ post_car.car_model_title }}</h1>
+                <h2 class="subheading px-4">({{ post_car.year_manufactured }})</h2>
+                <span class="meta px-4">
+                    Posted by
+                    <a href="#!">{{ post_car.author }}</a>
+                    {{ post_car.date_created }}
+                </span>
             </div>
         </div>
     </div>
-    
+    <!-- end head post -->
 </header>
 <!-- Post Content-->
 <article class="mb-4 mt-4">
     <a class="up-button"></a>
-    <div class="container px-4 px-lg-5">
+    <div class="container px-4">
         <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-7">
+            <div class="col-md-10">
                 <p>{{ post_car.content | safe }}</p>
+                <div class="row ms-3">
+                    <!-- Like icon -->
+                    <div class="col-2 hvr-icon-pulse-grow heart-icon t-red">
+                        <i class="far fa-heart hvr-icon"></i>
+                        <span class="t-white fs-5">{{ post_car.number_of_likes }}</span>
+                    </div>
+                    <!-- comments icon -->
+                    <div class="col-2 comment-icon">
+                        <i class="fas fa-comment-dots"></i>
+                        {% with comments.count as total_comments %}
+                        <span class="fs-5">{{ total_comments }}</span>
+                        {% endwith %}
+                    </div>
+                </div>
                 
             </div>
         </div>
     </div>
+    <!-- End post content -->
 </article>
 
+<!-- Comment section -->
+<div class="contain-fluid justify-content-center my-5">
+    <div class="row">
+        <div class="col-4 comment-line"></div>
+        <div class="col-4 d-flex justify-content-center align-top"><img src="{% static 'images/comments.png' %}" class="img-width" alt="comments"></div>
+        <div class="col-4 comment-line"></div>
+    </div>
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2">
+            <div class="row">
+                <div class="col-md-8 offset-md-2 mt-5">
+                    {% if user.is_authenticated %}
+                    <h3>Write a comment</h3>
+                    <p>From: {{ user.username }}</p>
+                    <form method="POST" class="my-4">
+                        {% csrf_token %}
+                        {{ comment_form }}
+                        <button type="submit" class="btn vintage-green-btn mt-4">Post comment</button>
+                    </form>
+                    {% endif %}
+                </div>
+
+                <div class="col-md-8 offset-md-2">
+                    <!-- comments -->
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End comment section -->
 {% endblock %}
