--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -64,7 +64,8 @@
     <div class="row mb-5">
         <div class="col-md-8 offset-md-2">
             <div class="row">
-                <div class="col-md-8 offset-md-2 mt-5">
+                <!-- Comment form section -->
+                <div class="col-8 offset-2 mt-5">
                     {% if user.is_authenticated %}
                     <h3>Write a comment</h3>
                     <p>From: {{ user.username }}</p>
