--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -68,7 +68,7 @@
                 <div class="col-8 offset-2 mt-5">
                     {% if user.is_authenticated %}
                     <h3>Write a comment</h3>
-                    <p>From: {{ user.username }}</p>
+                    <p>From: <span class="text-capitalize">{{ user.username }}</span></p>
                     <form method="POST" class="my-4">
                         {% csrf_token %}
                         {{ comment_form }}
@@ -79,6 +79,11 @@
 
                 <div class="col-md-8 offset-md-2">
                     <!-- comments -->
+                    <h3>Comments</h3>
+                    {% for comment in comments %}
+                    <p>Commented by: <strong class="text-capitalize">{{ comment.name }}</strong> <small class="text-secondary">{{ comment.date_created }}</small></p>
+                    <p>{{ comment.comment_body }}</p>
+                    {% endfor %}
                 </div>
                 
             </div>
