--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -18,7 +18,9 @@
 					<div class="col-lg-4 col-md-12">
 						<div class="view-more text-white hvr-icon-grow">
 							<a href="{% url 'car_detail' post.id %}"><i class="far fa-eye px-3 hvr-icon"></i></a>
-							<i class="fas fa-heart"></i> {{ post.number_of_likes }}
+							<span>
+								<i class="far fa-heart"></i>
+							</span>
 							<span class="col-1">
 								<i class="far fa-comments"></i>
 							</span>
