--- a/static/css/style.css
+++ b/static/css/style.css
@@ -327,11 +327,17 @@ footer {
 .vintage-green-btn {
     color: var(--vintage-white);
     background-color: #5a9786;
-    width: 200px;
+    width: 150px;
+    padding: 15px;
 }
 
 .vintage-green-btn:hover {
     background-color: var(--vintage-green);
+}
+
+.like-form button {
+    background-color: transparent;
+    border: none;
 }
 
 
