--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -19,7 +19,7 @@
                 <span class="meta px-4">
                     Posted by
                     <a href="#!">{{ post_car.author }}</a>
-                    {{ post_car.date_created }}
+                    {{ post_car.date_updated }}
                 </span>
             </div>
         </div>
