--- a/templates/cars/add_car.html
+++ b/templates/cars/add_car.html
@@ -4,7 +4,7 @@
 {% load static %}
 {% block content %}
 {% load cloudinary %}
-<div class="container">
+<div class="container add-form-container">
     <div class="row text-center my-5">
         <div class="col-md-8 offset-md-2 col-sm">
             <!-- header -->
