Edit style of summernote iframe

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -474,7 +474,9 @@ footer {
     width: 200px;
 }
 
-
+iframe[style] {
+    max-width: 100%;
+}
 
 /* -----------  Pagination  -------------------------------------------------------------------------------------------- */
 .pagination {
