--- a/static/css/style.css
+++ b/static/css/style.css
@@ -455,6 +455,10 @@ footer {
 }
 
 
+/* filter */
+.card {
+    background-color: rgb(146, 132, 132);
+}
 
 /* -----------  Form  -------------------------------------------------------------------------------------------- */
 .add-form-container {
@@ -591,7 +595,7 @@ iframe[style] {
 
     .heart-icon, .comment-icon {
         font-size: 25px;
-        width: 90px;
+        width: 100px;
     }
 
 }
