--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -43,10 +43,6 @@
                 </li>
             </ul>
             {% endif %}
-
-            <!-- <form class="col-10 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-            </form> -->
         </div>
     </div>
     <!-- end of profile nav -->
@@ -57,6 +53,20 @@
     <div class="container">
         <div class="row justify-content-center">
             {% if user.is_authenticated %}
+            <br>
+            <div class="row my-4 text-center">
+                <div class="col">
+                    <div class="card card-body">
+                        <form method="GET">
+                            {{ car_filter.form }}
+                            <div class="my-3">
+                                <button class="btn btn-secondary" type="submit">Search</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <br>
             {%  for post in post_car  %}
             {% if user.id is post.author.id %}
             <!-- Show all post if the author is the user -->
